# nuztf

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Check_MSIP_obsevations.ipynb  Check_fields.ipynb  Check_observations.ipynb  LICENSE.txt  LIGO_map_parser.ipynb  Neutrino_GCN_parser.ipynb  Neutrino_GCN_parser.py  OLD_LIGO_map_parser.ipynb  Query_by_hand.ipynb  README.md  TNS_submit.py  Untitled.ipynb  ampel_magic.py  ampel_requirements.txt  calculate_area.py  gewmopt_test.ipynb  grb.py  gw_multi_process.py  gw_scanner.py  neutrino_gcn_parser.py  neutrino_scanner.py  new_ampel_magic.py  pyproject.toml  query_ampel.ipynb  requirements.txt  runtime.txt  scan_simulated_skymap.py  setup.py  slack_bot.ipynb  slack_bot.py  slackbot.py  slackbot_server.py  spawn_tmux_session.sh  start_env.sh  start_slack.py  wsgi.py
.github/actions/: build_an_test.yml  deploy.yml
.github/actions/build_and_test/: action.yml
.github/workflows/: automerge.yml  autorebase.yml  black.yml  continous_integration.yml  continuous_integration.yml  isort.yml  release_workflow.yml
LIGO_skymaps/: LALInference.offline.fits.gz.cpgz
forced_photometry/: IC190730A_forced.txt
mmapy/: TNS_submit.py  __init__.py  ampel_api.py  ampel_magic.py  credentials.py  gw_multi_process.py  gw_scanner.py  neutrino_scanner.py  slack_bot.py  start_slack.py
notebooks/: Check_MSIP_obsevations.ipynb  Check_fields.ipynb  Check_historical_lightcurve_at_position.ipynb  Check_observations.ipynb  Forced Photometry Lightcurve.ipynb  LIGO_map_parser.ipynb  Neutrino_archival_search.ipynb  Query_by_hand.ipynb  ZTF_paper_scripts.ipynb  forced_photometry_lightcurve.ipynb  grb.ipynb  irsa_lightcurve.ipynb  neutrino_gcn_parser.ipynb  query_by_hand.ipynb  run_skymap_scan.ipynb  slack_bot.ipynb
nuztf/: TNS_submit.py  __init__.py  ampel_api.py  ampel_magic.py  base_scanner.py  cat_match.py  cli.py  credentials.py  flatpix.py  forced_photometry.py  fritz.py  gw_multi_process.py  gw_scanner.py  ipac.py  irsa.py  mpc_checker.py  neutrino_scanner.py  observation_log.py  observations.py  observations_depot.py  observations_old.py  parse_nu_gcn.py  paths.py  plot.py  skymap.py  skymap_loader.py  skymap_scanner.py  slack_bot.py  spawn_tmux_session.sh  start_slack.py  style.py  utils.py  ztf_fphot_script.py
nuztf/config/: gw_run_config.yaml  nu_run_config.yaml
nuztf/observations/: __init__.py  core.py  depot.py  master_log.py  mns.py  shared.py  skyvision.py  tap.py
overview/: .~lock.neutrino_too_followup - OVERVIEW_NOT_FU.csv#  calculate_area.py  neutrino_too_followup - OVERVIEW_NOT_FU.csv  plot_overview.py
service/: nuztf.service
tests/: __init__.py  test_api.py  test_cli.py  test_fritz.py  test_gcn_parser.py  test_grb_scanner.py  test_gw_scanner.py  test_irsa.py  test_neutrino_scanner.py  test_observations.py  test_skymap_scanner.py
