[tool.poetry]
name = "nuztf"
version = "2.6.7"
description = "Package for multi-messenger correlation searches with ZTF"
authors = ["Robert Stein <rdstein@caltech.edu>", "Simeon Reusch <simeon.reusch@desy.de>", "Jannis Necker <jannis.necker@desy.de>"]
repository = "https://github.com/desy-multimessenger/nuztf"
license = "MIT"
readme = "README.md"
classifiers = [
        "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ampel = { version = "^0.8.3a0", allow-prereleases = true}
ampel-ztf = {extras = ["archive"], version = "^0.8.3a2", allow-prereleases = true}
astropy = "^5.1"
astropy-healpix = ">=0.6,<0.8"
astroquery = "^0.4.6"
black = "^23.1.0"
backoff = "^2.0"
coveralls = "^3.3.1"
geopandas = ">=0.11,<0.13"
lalsuite = "^7.5"
gwemopt = ">=0.0.76,<0.0.85"
healpy = "^1.16.0"
scipy = "^1.8.1"
ipykernel = "^6.15.1"
jupyter = "^1.0.0"
ligo-gracedb = "^2.7.7"
"ligo.skymap" = "^1.0.0"
lxml = "^4.9.1"
matplotlib = "^3.5.2"
mocpy = ">=0.11,<0.13"
numpy = "^1.22.4"
pandas = "^1.4.3"
pre-commit = ">=2.20,<4.0"
python-ligo-lw = "^1.8.1"
pyvo = "^1.3"
requests = "^2.28.1"
seaborn = ">=0.11.2,<0.13.0"
setuptools = ">=65.3,<68.0"
tqdm = "^4.64.0"
wget = "^3.2"
ztfquery = "^1.18.4"
flask = {version = "^2.2.3", optional= true}
slackclient = {version = "^2.9.4", optional = true}
gunicorn = {version = "^20.1.0", optional = true}
slackeventsapi = {version = "^3.0.1", optional = true}

[tool.poetry.dev-dependencies]
coveralls = "^3.3.1"
pytest = "^7.3.1"

[tool.poetry.extras]
slackbot = ["slackclient", "gunicorn", "slackeventsapi", "flask"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
