[tool.poetry]
name = "nuztf"
version = "2.8.0"
description = "Package for multi-messenger correlation searches with ZTF"
authors = ["Robert Stein <rdstein@caltech.edu>", "Simeon Reusch <simeon.reusch@desy.de>", "Jannis Necker <jannis.necker@desy.de>"]
repository = "https://github.com/desy-multimessenger/nuztf"
license = "MIT"
readme = "README.md"
classifiers = [
        "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ampel-ztf = {extras = ["archive"], version = "^0.10.0"}
astropy = "^5.1"
astropy-healpix = ">=0.6,<1.1"
astroquery = "==0.4.6"
backoff = ">=2.0"
geopandas = ">=0.11,<0.15"
lalsuite = "^7.5"
gwemopt = ">=0.0.76,<0.0.85"
healpy = "^1.16.0"
scipy = ">=1.8.1"
ipykernel = ">=6.15.1"
jupyter = ">=1.0.0"
ligo-gracedb = "^2.7.7"
"ligo.skymap" = "^1.0.0"
lxml = "^4.9.1"
matplotlib = ">=3"
mocpy = ">=0.11,<0.14"
numpy = ">=1.22.4"
pandas = "^1.4.3"
python-ligo-lw = "^1.8.1"
pyvo = ">=1.3"
requests = ">2.28.1,<2.32.0"
seaborn = ">=0.11.2"
setuptools = ">=65.3"
tqdm = ">=4.64.0"
wget = ">=3.2"
ztfquery = "^1.18.4"
flask = {version = "^2.2.3", optional= true}
slackclient = {version = "^2.9.4", optional = true}
gunicorn = {version = ">=20.1,<22.0", optional = true}
slackeventsapi = {version = "^3.0.1", optional = true}


[tool.poetry.dev-dependencies]
black = "^24.3.0"
coverage = "^6.0"
coveralls = "^3.3.1"
pytest = "^8.1.1"
isort = "^5.12.0"
pre-commit = ">=2.20,<4.0"

[tool.poetry.extras]
slackbot = ["slackclient", "gunicorn", "slackeventsapi", "flask"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
