[tool.poetry]
name = "nuztf"
version = "2.9.0"
description = "Package for multi-messenger correlation searches with ZTF"
authors = ["Robert Stein <rdstein@caltech.edu>", "Simeon Reusch <simeon.reusch@desy.de>", "Jannis Necker <jannis.necker@desy.de>"]
repository = "https://github.com/desy-multimessenger/nuztf"
license = "MIT"
readme = "README.md"
classifiers = [
        "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ampel-ztf = {extras = ["archive"], version = "^0.10.0"}
ampel-interface = "<=0.10.3"
astropy = ">=5.1,<7.0"
astropy-healpix = ">=0.6,<1.2"
astroquery = "==0.4.6"
backoff = ">=2.0"
geopandas = ">=0.11,<1.1"
lalsuite = "^7.5"
gwemopt = ">=0.0.76,<0.0.85"
healpy = "^1.16.0"
scipy = ">=1.8.1"
ipykernel = ">=6.15.1"
jupyter = ">=1.0.0"
ligo-gracedb = "^2.7.7"
"ligo.skymap" = "^2.1.2"
lxml = ">=4.9.1,<6.0.0"
matplotlib = ">=3"
mocpy = ">=0.11,<0.18"
numpy = ">=2.0.0"
pandas = ">=1.4.3,<3.0.0"
python-ligo-lw = "^1.8.1"
pyvo = ">=1.3"
requests = ">2.28.1,<2.33.0"
seaborn = ">=0.11.2"
setuptools = ">=65.3"
tqdm = ">=4.64.0"
wget = ">=3.2"
ztfquery = "^1.28.0"
flask = {version = "^2.2.3", optional= true}
slackclient = {version = "^2.9.4", optional = true}
gunicorn = {version = ">=20.1,<24.0", optional = true}
slackeventsapi = {version = "^3.0.1", optional = true}
typer = {version = "^0.15.1", optional = true}


[tool.poetry.scripts]
nuztf = "nuztf.cli:cli_command"


[tool.poetry.dev-dependencies]
black = "^25.1.0"
coverage = "^7.6"
coveralls = "^4.0.0"
pytest = "^8.3.2"
isort = "^6.0.0"
pre-commit = ">=2.20,<5.0"

[tool.poetry.extras]
slackbot = ["slackclient", "gunicorn", "slackeventsapi", "flask"]
cli = ["typer"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
